cc-manifests-central/web-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: happy-admin-web
  name: happy-admin-web
  namespace: default
  selector:
    matchLabels:
      app: happy-web-admin
  template:
    metadata:
      labels:
        app: happy-web-admin
    spec:
      containers:
      - env:
        - name: NEXT_PUBLIC_HAPPY_BASE_URL_API
          value: http://happy-admin-svc:55000/api
        - name: NODE_ENV
          value: production
        - name: PORT
          value: "3000"
        image: syahdaromstudenttelu/happy-web-admin
        imagePullPolicy: Always
        name: happy-web-admin
        ports:
        - containerPort: 55000
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 70Mi
          requests:
            cpu: 20m
            memory: 25Mi
      restartPolicy: Alway
