cc-manifests-central/web-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happy-web-admin
  namespace: default
spec:
  ports:
  - name: happy-web-admin
    port: 80
    protocol: TCP
    targetPort: 55000
  selector:
    app: happy-web-admin
  type: LoadBalancer
