cc-manifests-central/web-admin/gw-webadmin.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: adminweb-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - adminweb.anbutech.xyz
    port:
      name: http
      number: 80
      protocol: HTTP
