cc-manifests-central/web-admin/vs-webadmin.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: adminweb-virtualservice
  namespace: istio-system
spec:
  gateways:
  - adminweb-gateway
  hosts:
  - adminweb.anbutech.xyz
  http:
  - route:
    - destination:
        host: happy-web-admin.default.svc.cluster.local
        port:
          number: 80
